; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_mv643xx_eth.c_mv643xx_eth_set_coalesce.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_mv643xx_eth.c_mv643xx_eth_set_coalesce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ethtool_coalesce = type { i32, i32 }
%struct.mv643xx_eth_private = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.ethtool_coalesce*)* @mv643xx_eth_set_coalesce to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mv643xx_eth_set_coalesce(%struct.net_device* %0, %struct.ethtool_coalesce* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.ethtool_coalesce*, align 8
  %5 = alloca %struct.mv643xx_eth_private*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.ethtool_coalesce* %1, %struct.ethtool_coalesce** %4, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.mv643xx_eth_private* @netdev_priv(%struct.net_device* %6)
  store %struct.mv643xx_eth_private* %7, %struct.mv643xx_eth_private** %5, align 8
  %8 = load %struct.mv643xx_eth_private*, %struct.mv643xx_eth_private** %5, align 8
  %9 = load %struct.ethtool_coalesce*, %struct.ethtool_coalesce** %4, align 8
  %10 = getelementptr inbounds %struct.ethtool_coalesce, %struct.ethtool_coalesce* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @set_rx_coal(%struct.mv643xx_eth_private* %8, i32 %11)
  %13 = load %struct.mv643xx_eth_private*, %struct.mv643xx_eth_private** %5, align 8
  %14 = load %struct.ethtool_coalesce*, %struct.ethtool_coalesce** %4, align 8
  %15 = getelementptr inbounds %struct.ethtool_coalesce, %struct.ethtool_coalesce* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @set_tx_coal(%struct.mv643xx_eth_private* %13, i32 %16)
  ret i32 0
}

declare dso_local %struct.mv643xx_eth_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @set_rx_coal(%struct.mv643xx_eth_private*, i32) #1

declare dso_local i32 @set_tx_coal(%struct.mv643xx_eth_private*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
